Improve Sonar Quality